Add a new Entity called BeerOrderShipment to the project. The new entity must include the following properties: shipmentDate carrier trackingNumber
Establish a relationship:
TheBeerOrder will have a one-to-many relationship with BeerOrderShipment.

Create a new RESTful CRUD Controller for BeerOrderShipment.
