# src/main/java/walshe/juniemvc/juniemvc/entities/BeerOrderShipment.java
@@ -1,0 +1,30 @@
+package walshe.juniemvc.juniemvc.entities;
+
+import jakarta.persistence.Entity;
+import jakarta.persistence.FetchType;
+import jakarta.persistence.JoinColumn;
+import jakarta.persistence.ManyToOne;
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
+
+import java.time.LocalDateTime;
+
+@Getter
+@Setter
+@Entity
+@Builder
+@AllArgsConstructor
+@NoArgsConstructor
+public class BeerOrderShipment extends BaseEntity {
+
+    private LocalDateTime shipmentDate;
+    private String carrier;
+    private String trackingNumber;
+
+    @ManyToOne(fetch = FetchType.LAZY, optional = false)
+    @JoinColumn(name = "beer_order_id", nullable = false)
+    private BeerOrder beerOrder;
+}
